# AI-CV-Selection-System

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py
